# with-baby-auth

./: .env  Cargo.toml  Dockerfile  build.sh  with-baby-auth.sql
curl/: exists.curl  headers.txt  signin.curl  signup.curl  verify.curl
docs/: api.yaml  接口文档.md  需求文档.md
k8s/: load-balancer.yml  mongo-pv.yml  mongo-sts.yml  mongo-svc.yml  service.yml  stateful-set.yml
migrations/2022-09-08-062350_init/: up.sql
src/: core.rs  errors.rs  handlers.rs  hashers.rs  main.rs  models.rs  schema.rs  storers.rs  tokeners.rs
src/hashers/: sha.rs
src/storers/: mod.rs  mongo.rs  pg.rs
src/tokeners/: jwt.rs
