[package]
name = "with-baby-auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
diesel = { version = "2.0.0", features = ["postgres", "r2d2"] }
hmac = "0.12.1"
jwt = "0.16.0"
rand = "0.8.5"
serde = "1.0.144"
sha2 = "0.10.5"
