[package]
name = "with-baby-auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
actix_header = "0.1.4"
base64 = "0.13.0"
diesel = { version = "2.0.0", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
env_logger = "0.9.3"
hex = "0.4.3"
hmac = "0.12.1"
jwt = "0.16.0"
log = "0.4.17"
mongodb = "2.3.0"
rand = "0.8.5"
serde = { version = "1.0.144", features = ["derive"] }
sha2 = "0.10.5"
tokio = "1.21.2"
